--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <h2>Quick Trading Guide</h2>
+        <h3>Simple Strategies You Can Use Now!</h3>
+        <h4> Supply and Demand</h4>
+        <p>This is a simple strategy that solely depends on finding <strong>point of interest</strong>.</p>
+        <p><em>Here is a list of things you will need to do to trade with this strategy</em></p>
+        <ol>
+            <li>    Identify where supply and demand zones are, this will give you a good indication of support and resistance</li>
+            <li>    Determine the trend before you transact your trade. This will increase the likelihood of profit. Remember that <strong>the trend is your friend.</strong></li>
+            <li>    If it is an uptrend, you will long when price reaches the <strong>demand zone</strong> if it is a down trend, you will short when price reaches the <strong>supply zone.</strong></demand></li>
+        </ol>
+        <h4> Moving Average </h4>
+        <p> Trading the moving average is very simple to follow, however, it takes a lot of discretion to make this strategy work.</p>
+        <p> This is a strategy that can easily be automated, but the reason why it isn't is due to market variance. You can argue that one can build a neural network to combat this issue, and this is true, but what retailer do you know (aside from me) that can build a neural network trading system from their bedroom?</p>
+        <p><em> Here is the steps to trading with this strategy.</em></p>
+        <ol>
+            <li> Pick a few timeframes to trade with, this is an intraday trading strategy; you will not be holding trades long</li>
+            <li> Once timeframe is determined, assess the trend. </li>
+            <li>Depending on the trend, you will either long or short whenever price revisits the moving average.</li>
+        <h4><strong>QUICK TIPS</strong></h4>
+            <p> As mentioned earlier, this strategy heavily relies on your discretion and personal ability to trade. You will need to have a lot of disciplined and use your time wisely to study and track your trades. This is a reptition based learning process. Don't be lazy.</p>
+        </ol>
+
     </body>
  </html>
-
- 
