odin-links-and-images/images/background.jpg

--- a/odin-links-and-images/Index.html
+++ b/odin-links-and-images/Index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a>About The Voruna Project</a>
+    <a>About The Odin Project</a>
+    <a href="https://www.theodinproject.com/about">About the Odin Project</a>
+
+    <a>Click this link to open a new tab</a>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">Click this link to open a new tab</a>
 </body>
 </html>
+
+<body>
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about">About The Odin Project</a>
+
+    <a href="./pages/about.html">About</a>
+
+    <img src="./images/background.jpg">
+    <img src="../images/background.jpg">
+</body>
