odin-links-and-images/Extras.html

--- a/odin-links-and-images/Index.html
+++ b/odin-links-and-images/Index.html
@@ -21,6 +21,5 @@
 
     <a href="./pages/about.html">About</a>
 
-    <img src="./images/background.jpg">
-    <img src="../images/background.jpg">
-</body>
+    <img src="./images/background.jpg" alt="Background Logo" height="155" width="310">
+</body> 
