--- a/odin-links-and-images/Images.html
+++ b/odin-links-and-images/Images.html
@@ -15,12 +15,17 @@
         <li>JPG images are designed for handling large color palettes without exorbitantly increasing file size. This makes them great for photos and images with lots of gradients in them. On the other hand, JPGs, don't allow for transparent pixels, which you can see in the white edges of the iamge below if you look real close</li>
         <img src="images/mochi.jpg"/>
 
-        <h1>GIF Images</h1>
+        <h2>GIF Images</h2>
         <li>GIFs are the go-to option for simple animations, but the trade off is that they're somewhat limited in terms of color palette--never use them for photos. Transparent pxiels are a binary option for GIFs, meaning you can't have semi-opaque pixels. This can make it difficult to get high levels of detail on a transparent background. For this reason, it's usually better to use PNG images if you don't need animation.</li>
         <img src="images/mochi.gif"/>
 
         <h2>PNG Images</h2>
         <p>PNGs are great for anything that's not a photo or animated. For photos, a PNG file of the same quality would generally be bigger than an equivalent JPG file. However, they do deal with opacity just fine, and they don't have color palette limitations. This makes them an excellent fit for icons, technical diagrams, logos, etc.</p>
         <img src="images/mochi.png"/>
-</body>
+
+        <h2>SVG Images</h2>
+        <p> SVG is a vector-based graphics format, meaning it can scale up or down to any dimension without loss of quality. This property makes SVG images a wonderful tool for responsive design. They're good for pretty much all the same use cases and PNGs, and you should sue them whenever you can</p>
+        <p> SVGs are <em><strong>amazing</strong></em>. Use them whenever you can.</p>
+        <img src="images/mochi.png" alt="mochi" height="600" weight="600"/>
+    </body>
 </html>
