--- a/odin-links-and-images/Images.html
+++ b/odin-links-and-images/Images.html
@@ -27,5 +27,7 @@
         <p> SVG is a vector-based graphics format, meaning it can scale up or down to any dimension without loss of quality. This property makes SVG images a wonderful tool for responsive design. They're good for pretty much all the same use cases and PNGs, and you should sue them whenever you can</p>
         <p> SVGs are <em><strong>amazing</strong></em>. Use them whenever you can.</p>
         <img src="images/mochi.svg" alt="a mochi with stretched cursors surrounding it" height="600" width="600"/>
+
+        <h3><e>These are four examples of images used in html.</e></h3>
     </body>
 </html>
